2003-04-05  Kevin Ryde  <user42@zip.com.au>

	* info-look.el (emacs-lisp-mode): Add prefix/suffix matching regexps.

2003-04-04  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* subr.el (number-sequence): Adjust code.

2003-04-04  Stefan Monnier  <monnier@cs.yale.edu>

	* textmodes/refill.el (refill-fill-paragraph-at): Undo last fix.
	(refill-fill-paragraph-at): Don't skip prefix since markers work right.

	* textmodes/fill.el (fill-delete-newlines): Remove trailing whitespace.
	(fill-paragraph): Don't skip prefix now that markers work right.

2003-04-04  John Paul Wallington  <jpw@gnu.org>

	* ibuffer.el (ibuffer-insert-filter-group): `help-echo' text
	property dynamically respects `tooltip-mode'.
	(define-ibuffer-column name): Likewise.

	* ibuf-ext.el (ibuffer-format-filter-group-data): Don't append "\n".

2003-04-04  Masatake YAMATO  <jet@gyve.org>

	* progmodes/etags.el (find-file-of-tag-noselect, find-file-of-tag):
	New helper functions.
	(snarf-tag-function): Doc string is changed.  Explained about new
	optional argument, `use-explicit'.
	(etags-snarf-tag): Add one optional argument `use-explicit'.
	(file-of-tag-function): Doc string is changed.  Explained about new
	optional argument, `relative'.
	(file-of-tag): Doc string is changed.  Explained about new optional
	argument, `relative'.  Pass `relative' to `file-of-tag-function'.
	(etags-file-of-tag): Add new argument `relative`.
	(list-tags): Set `buffer-read-only' to t after making the major mode
	apropos-mode.
	(etags-list-tags): Use `make-text-button' instead of
	`add-text-properties'.  Used `snarf-tag-function',
	`goto-tag-location-function' and `find-file-of-tag' instead of
	`find-tag-other-window' (it's too simple).
	(find-tag-in-order): Use `find-file-of-tag-noselect' instead of
	`find-file'.
	(etags-tags-apropos): Use `find-file-of-tag-noselect' instead of
	`find-file'.  Do not use `etags-goto-tag-location` directly; use
	`goto-tag-location-function' instead.  Print relative file paths